test/classes/jplevyak/record_type_hierarchy-2.good
record_type_hierarchy-2.chpl:16: error: unresolved call 'f(D)'
record_type_hierarchy-2.chpl:10: note: this candidate did not match: f(a: C)
record_type_hierarchy-2.chpl:16: note: because call actual argument #1 with type D
record_type_hierarchy-2.chpl:10: note: is passed to formal 'a: C'
